--- a/config_nav/base_local_planner_params.yaml
+++ b/config_nav/base_local_planner_params.yaml
@@ -3,11 +3,11 @@ TrajectoryPlannerROS:
   transform_tolerance: 0.3
   sim_time: 1.7
   sim_granularity: 0.025
-  dwa: false
+  dwa: true
   vx_samples: 3
   vtheta_samples: 20
   max_vel_x: 0.5 # 0.65
-  min_vel_x: 0.0
+  min_vel_x: -0.5
   max_rotational_vel: 1.0
   min_in_place_rotational_vel: 0.4
   xy_goal_tolerance: 0.05
