--- a/config_nav/costmap_common_params.yaml
+++ b/config_nav/costmap_common_params.yaml
@@ -13,10 +13,10 @@ raytrace_range: 5.0
 footprint: [[-0.25, -0.25], [-0.25, 0.25], [0.25, 0.25], [0.25, -0.25]]
 #robot_radius: 0.46
 footprint_padding: 0.002
-inflation_radius: 0.01
+inflation_radius: 2.5
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 10
 unknown_cost_value: 255
-# observation_sources: robot_0/base_scan_1
+observation_sources: robot_0/base_scan_1
 base_scan: {data_type: LaserScan, expected_update_rate: 10,
   observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
