--- a/config_nav/global_costmap_params.yaml
+++ b/config_nav/global_costmap_params.yaml
@@ -17,10 +17,12 @@ GlobalPlanner:
 #Independent settings for the planner's costmap
 global_costmap: 
   global_frame: /map
-  # robot_base_frame: robot_0/base_link
+  robot_base_frame: robot_0/base_link
   update_frequency: 10.0
   publish_frequency: 10.0
   static_map: true
   width: 100.0
   height: 100.0
   rolling_window: true
+#  inflation_layer:
+#    inflation_radius: 2.5
