--- a/config_nav/recovery_behaviors.yaml
+++ b/config_nav/recovery_behaviors.yaml
@@ -1,7 +1,7 @@
-recovery_behaviors:  [
-  {name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, 
-  # {name: rotate_recovery, type: rotate_recovery/RotateRecovery}, 
-  {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
-] 
-conservative_clear:
-  reset_distance: 1.0
+recovery_behaviors:
+  - name: 'rotate_recovery'
+    type: 'rotate_recovery/RotateRecovery'
+  - name: 'clear_costmap'
+    type: 'clear_costmap_recovery/ClearCostmapRecovery'
+#  - name: 'straf_recovery'
+#    type: 'straf_recovery/StrafRecovery'
