--- a/config_nav/teb_local_planner_params.yaml
+++ b/config_nav/teb_local_planner_params.yaml
@@ -1,124 +1,78 @@
 base_local_planner: teb_local_planner/TebLocalPlannerROS
 
-TebLocalPlannerROS:
-  sim_time: 1
-  map_frame: /map
-     
-  # Trajectory
-   
-  teb_autosize: True
-  dt_ref: 0.3
-  dt_hysteresis: 0.1
-  global_plan_overwrite_orientation: True
-  max_global_plan_lookahead_dist: 4.5 # 3.0
-  feasibility_check_no_poses: 10
-     
-  # Robot
-          
-  max_vel_x: 1.7 # 0.7 #
-  max_vel_x_backwards: 0.15 # 0.3
-  max_vel_theta: 2.5 # 2.5
-  acc_lim_x: 1 # 0.4
-  acc_lim_theta: 0.9 # 0.9
-  min_turning_radius: 0.0
-  
+controller:
+  acc_lim_theta: 0.5
+  acc_lim_x: 0.5
+  acc_lim_y: 0.5
+  allow_init_with_backwards_motion: false
   cmd_angle_instead_rotvel: false
-  wheelbase: 0.5
-  
-  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-    type: "circular"
-    radius: 0.2 # for type "circular"
-    #line_start: [-0.3, 0.0] # for type "line"
-    #line_end: [0.3, 0.0] # for type "line"
-    #front_offset: 0.2 # for type "two_circles"
-    #front_radius: 0.2 # for type "two_circles"
-    #rear_offset: 0.2 # for type "two_circles"
-    #rear_radius: 0.2 # for type "two_circles"
-    #vertices:  [[-0.2555, -0.2], [-0.2555, 0.2], [0.2555, 0.2], [0.2555, -0.2]]
-  # GoalTolerance
-     
-  xy_goal_tolerance: 0.1
-  yaw_goal_tolerance: 0.1
+  costmap_obstacles_behind_robot_dist: 0.4
+  dt_hysteresis: 0.17928
+  dt_ref: 0.3
+  dynamic_obstacle_inflation_dist: 15.0
+  enable_multithreading: true
+  exact_arc_length: false
+  feasibility_check_no_poses: 8
+  force_reinit_new_goal_dist: 1.0
   free_goal_vel: true
-
-     
-  # Obstacles
-     
-  min_obstacle_dist: 0.25
-  include_costmap_obstacles: False
-  costmap_obstacles_behind_robot_dist: 1.0
-  obstacle_poses_affected: 30
-  costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
-  #costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
-  #costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSMCCH"
-  #costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSConcaveHull"
-  #costmap_converter_plugin: "" # deactivate plugin
-  costmap_converter_spin_thread: True
-  costmap_converter_rate: 10
-  # costmap_converter/CostmapToLinesDBSRANSAC:
-  #    cluster_max_distance: 0.4
- 
-  # Optimization
-  force_reinit_new_goal_dist: 1
+  global_plan_overwrite_orientation: false
+  global_plan_viapoint_sep: 0.408
+  h_signature_prescaler: 1.0
+  h_signature_threshold: 0.1
+  include_costmap_obstacles: true
+  include_dynamic_obstacles: false
+  inflation_dist: 0.0
+  is_footprint_dynamic: false
+  legacy_obstacle_association: true
+  max_global_plan_lookahead_dist: 24.0
+  max_number_classes: 5
+  max_vel_theta: 0.3
+  max_vel_x: 1.9997999999999998
+  max_vel_x_backwards: 0.2
+  max_vel_y: 0.0
+  min_obstacle_dist: 0.3
+  min_turning_radius: 0.0
   no_inner_iterations: 5
   no_outer_iterations: 4
-  optimization_activate: True
-  optimization_verbose: False
-  penalty_epsilon: 0.1
-  weight_max_vel_x: 4
-  weight_max_vel_theta: 1
-  weight_acc_lim_x: 100
-  weight_acc_lim_theta: 1
-  weight_kinematics_nh: 1000
-  weight_kinematics_forward_drive: 30
-  weight_kinematics_turning_radius: 20
-  weight_optimaltime: 1
-  weight_obstacle: 50
-  weight_dynamic_obstacle: 10 # not in use yet
-  selection_alternative_time_cost: False 
- 
-  # Homotopy Class Planner
- 
-  enable_homotopy_class_planning: True
-  enable_multithreading: True
-  simple_exploration: False
-  max_number_classes: 4
-  roadmap_graph_no_samples: 15
-  roadmap_graph_area_width: 5
-  h_signature_prescaler: 0.5
-  h_signature_threshold: 0.1
-  obstacle_keypoint_offset: 0.1
+  obstacle_association_cutoff_factor: 5.0
+  obstacle_association_force_inclusion_factor: 1.0
   obstacle_heading_threshold: 0.45
-  visualize_hc_graph: False
-
-
-# TrajectoryPlannerROS:
-#   #Independent settings for the local costmap
-#   transform_tolerance: 0.3
-#   sim_time: 1.7
-#   sim_granularity: 0.025
-#   dwa: true
-#   vx_samples: 10
-#   vtheta_samples: 20
-#   max_vel_x: 1.0
-#   min_vel_x: 0.8
-#   max_rotational_vel: 1.0
-#   max_vel_x_backwards: 0.5
-#   min_in_place_rotational_vel: 0. 4
-#   xy_goal_tolerance: 0.4
-#   yaw_goal_tolerance: 0.05
-#   goal_distance_bias: 0.8
-#   path_distance_bias: 0.6
-#   occdist_scale: 0.01
-#   heading_lookahead: 1.0 #0.325
-#   oscillation_reset_dist: 0.05
-#   holonomic_robot: false #true
-#   acc_lim_th: 3.2
-#   acc_lim_x: 2.5
-#   acc_lim_y: 2.5
-#   max_global_plan_lookahead_dist: 10
-#   costmap_obstacles_behind_robot_dist: 1
-#   include_costmap_obstacles: true
-#   weight_max_vel_x: 200
-#   weight_kinematics_forward_drive: 2
-#   weight_acc_lim_x: 2
+  obstacle_poses_affected: 30
+  optimization_activate: true
+  optimization_verbose: false
+  oscillation_recovery: true
+  penalty_epsilon: 0.1
+  publish_feedback: false
+  roadmap_graph_area_length_scale: 1.0
+  roadmap_graph_area_width: 5.0
+  roadmap_graph_no_samples: 15
+  selection_alternative_time_cost: true
+  selection_cost_hysteresis: 0.94
+  selection_obst_cost_scale: 100.0
+  selection_prefer_initial_plan: 0.95
+  selection_viapoint_cost_scale: 1.0
+  shrink_horizon_backup: true
+  teb_autosize: true
+  via_points_ordered: false
+  viapoints_all_candidates: true
+  visualize_hc_graph: false
+  visualize_with_time_as_z_axis_scale: 0.0
+  weight_acc_lim_theta: 1.0
+  weight_acc_lim_x: 1.0
+  weight_acc_lim_y: 1.0
+  weight_adapt_factor: 5.9399999999999995
+  weight_dynamic_obstacle: 50.0
+  weight_dynamic_obstacle_inflation: 0.6
+  weight_inflation: 0.1
+  weight_kinematics_forward_drive: 1.0
+  weight_kinematics_nh: 1000.0
+  weight_kinematics_turning_radius: 1.0
+  weight_max_vel_theta: 1.0
+  weight_max_vel_x: 30.0
+  weight_max_vel_y: 2.0
+  weight_obstacle: 50.0
+  weight_optimaltime: 50.0
+  weight_viapoint: 1.0
+  wheelbase: -0.6
+  xy_goal_tolerance: 0.2
+  yaw_goal_tolerance: 0.1
