--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,7 @@
   <run_depend>tf</run_depend>
   <run_depend>move_base</run_depend>
   <run_depend>move_base_msgs</run_depend>
+  <run_depend>move_base_flex</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
