--- a/config_nav/dwa_local_planner_params.yaml
+++ b/config_nav/dwa_local_planner_params.yaml
@@ -1,52 +1,86 @@
 base_local_planner: dwa_local_planner/DWAPlannerROS
 
-DWAPlannerROS:
-  acc_lim_th: 10
-  acc_lim_x: 10
-  # acc_lim_y: 0.0
+controller:
+  acc_lim_theta: 0.9998999999999999
+  acc_lim_x: 21.997799999999998
+  acc_lim_y: 32.9967
+  allow_init_with_backwards_motion: false
+  cmd_angle_instead_rotvel: false
+  costmap_obstacles_behind_robot_dist: 1.5
+  dt_hysteresis: 0.1
+  dt_ref: 0.3366
+  dynamic_obstacle_inflation_dist: 0.6
+  enable_multithreading: true
+  exact_arc_length: false
+  feasibility_check_no_poses: 0
+  force_reinit_new_goal_dist: 0.1
+  free_goal_vel: true
+  global_plan_overwrite_orientation: true
+  global_plan_viapoint_sep: 0.408
 
-  max_vel_x: 10.5
-  min_vel_x: 0.0
+  roadmap_graph_no_samples: 17
+  selection_alternative_time_cost: false
+  selection_cost_hysteresis: 1.0
+  selection_obst_cost_scale: 60.0
+  shrink_horizon_backup: true
+  state: true
+  teb_autosize: true
+  via_points_ordered: false
+  viapoints_all_candidates: true
+  visualize_hc_graph: false
+  visualize_with_time_as_z_axis_scale: 0.0
 
-  vx_samples: 3
-  # vth_samples: 10
-  vtheta_samples: 5
+  h_signature_prescaler: 1.0
+  h_signature_threshold: 0.1
+  include_costmap_obstacles: true
+  include_dynamic_obstacles: false
+  inflation_dist: 3
+  is_footprint_dynamic: true
+  legacy_obstacle_association: false
+  max_global_plan_lookahead_dist: 3.0
+  max_number_classes: 6
+  max_vel_theta: 3.9995999999999996
+  max_vel_x: 1.0
+  max_vel_x_backwards: 0.01
+  max_vel_y: 0.0
+  min_obstacle_dist: 0.5
+  min_turning_radius: 0.0
+  no_inner_iterations: 5
+  no_outer_iterations: 4
+  obstacle_association_cutoff_factor: 14.85
+  obstacle_association_force_inclusion_factor: 1.5
+  obstacle_heading_threshold: 0.45
+  obstacle_poses_affected: 183
+  optimization_activate: true
+  optimization_verbose: false
+  oscillation_recovery: true
+  penalty_epsilon: 0.1
+  publish_feedback: false
+  roadmap_graph_area_width: 5.0
 
-  # max_vel_y: 0.0
-  # min_vel_y: 0.0
-
-  # max_trans_vel: 1.5
-  # min_trans_vel: 0.1
-
-  # # max_rot_vel: 2.0
-  # # min_rot_vel: 0.4
-
-  sim_time: 1.7
-  # # sim_granularity: 0.025
-
-  # # goal_distance_bias: 24.0
-  # # path_distance_bias: 32.0
-  # # occdist_scale: 0.01
-
-  # # stop_time_buffer: 0.2
-  # oscillation_reset_dist: 0.1
-
-  forward_point_distance: 0.325
-
-  scaling_speed: 2.0
-  # max_scaling_factor: 0.2
-
-  # # vx_samples: 10
-  # # vy_samples: 0
-  # # vtheta_samples: 20
-
-  sim_period: 1
-
-  # # xy_goal_tolerance: 0.2
-  # # yaw_goal_tolerance: 0.2
-
-  # # rot_stopped_vel: 0.01
-  # # trans_stopped_vel: 0.01
-
-  # meter_scoring: true
-  # publish_cost_grid
+  selection_prefer_initial_plan: 0.7
+  selection_viapoint_cost_scale: 8.0
+  shrink_horizon_backup: true
+  teb_autosize: true
+  via_points_ordered: false
+  viapoints_all_candidates: true
+  visualize_hc_graph: false
+  visualize_with_time_as_z_axis_scale: 0.0
+  weight_acc_lim_theta: 1.0
+  weight_acc_lim_x: 50.0
+  weight_acc_lim_y: 1.0
+  weight_adapt_factor: 2.0
+  weight_dynamic_obstacle: 50.0
+  weight_dynamic_obstacle_inflation: 0.1
+  weight_inflation: 10
+  weight_kinematics_forward_drive: 240.0
+  weight_kinematics_nh: 1000.0
+  weight_kinematics_turning_radius: 1.0
+  weight_max_vel_theta: 1.0
+  weight_max_vel_x: 60.0
+  weight_max_vel_y: 2.0
+  weight_obstacle: 50.0
+  weight_optimaltime: 200.0
+  weight_viapoint: 1.0
+  xy_goal_tolerance: 0.2
+  yaw_goal_tolerance: 0.12796000000000002
