--- a/config_nav/local_costmap_params.yaml
+++ b/config_nav/local_costmap_params.yaml
@@ -1,6 +1,6 @@
 local_costmap:
   publish_voxel_map: true
-  global_frame: /map
+  global_frame: /map_server
   robot_base_frame: robot_0/base_link
   update_frequency: 20.0
   publish_frequency: 20.0
@@ -8,6 +8,6 @@ local_costmap:
   rolling_window: true
   width: 3.0 # 5.0
   height: 3.0 # 5.0
-  resolution: 0.05 # 0.025
+  resolution: 0.1 # 0.025
   origin_x: 0.0
   origin_y: 0.0
