--- a/package.xml
+++ b/package.xml
@@ -55,6 +55,7 @@
   <build_depend>tf</build_depend>
   <build_depend>move_base</build_depend>
   <build_depend>move_base_msgs</build_depend>
+  <build_depend>costmap_2d</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -73,6 +74,7 @@
   <run_depend>move_base</run_depend>
   <run_depend>move_base_msgs</run_depend>
   <run_depend>move_base_flex</run_depend>
+  <run_depend>costmap_2d</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
