--- a/config_nav/costmap_common_params.yaml
+++ b/config_nav/costmap_common_params.yaml
@@ -17,8 +17,8 @@ inflation_radius: 2.5
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 10
 unknown_cost_value: 255
-observation_sources: robot_0/base_scan_1
-robot_0/base_scan_1: {
+observation_sources: base_scan
+base_scan: {
   data_type: LaserScan, expected_update_rate: 10,
   observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08,
 }
