--- a/config_nav/local_costmap_params.yaml
+++ b/config_nav/local_costmap_params.yaml
@@ -1,7 +1,7 @@
 local_costmap:
   publish_voxel_map: true
   global_frame: /map_server
-  robot_base_frame: robot_0/base_link
+  robot_base_frame: base_link
   update_frequency: 20.0
   publish_frequency: 20.0
   static_map: true
