try follow ahead work

--- a/config_nav/global_costmap_params.yaml
+++ b/config_nav/global_costmap_params.yaml
@@ -16,7 +16,7 @@ GlobalPlanner:
 
 #Independent settings for the planner's costmap
 global_costmap: 
-  global_frame: /map_server
+  global_frame: /map
   robot_base_frame: base_link
   update_frequency: 1.0
   publish_frequency: 1.0
