--- a/config_nav/cmd_vel_mux.yaml
+++ b/config_nav/cmd_vel_mux.yaml
@@ -11,7 +11,7 @@ subscribers:
     priority:    1
     short_desc:  "The default cmd_vel, controllers unaware that we are multiplexing cmd_vel should come here"
 
-  - name:        "move_base"
+  - name:        "move_baase"
     topic:       "/move_base/cmd_vel"
     timeout:     0.15
     priority:    0
