--- a/config_nav/local_costmap_params.yaml
+++ b/config_nav/local_costmap_params.yaml
@@ -1,6 +1,6 @@
 local_costmap:
   publish_voxel_map: true
-  global_frame: /map_server
+  global_frame: /map
   robot_base_frame: base_link
   update_frequency: 20.0
   publish_frequency: 20.0
