added new resnet model seprate map and laser

--- a/config_nav/my_costmap.yaml
+++ b/config_nav/my_costmap.yaml
@@ -6,4 +6,4 @@ my_costmap:
   map_topic: "gmap"
   publish_frequency: 20
   obstacles:
-    observation_sources: base_scan
+    observation_sources: scan
