--- a/config_nav/dwa_local_planner_params.yaml
+++ b/config_nav/dwa_local_planner_params.yaml
@@ -1,9 +1,9 @@
 base_local_planner: dwa_local_planner/DWAPlannerROS
 
 controller:
-  acc_lim_theta: 0.298999999999999
-  acc_lim_x: 1.
-  acc_lim_y: 1.
+  acc_lim_theta: 0.1
+  acc_lim_x: 0.1
+  acc_lim_y: 0.1
   allow_init_with_backwards_motion: false
   cmd_angle_instead_rotvel: false
   costmap_obstacles_behind_robot_dist: 1.5
@@ -34,16 +34,16 @@ controller:
   h_signature_threshold: 0.1
   include_costmap_obstacles: true
   include_dynamic_obstacles: false
-  inflation_dist: 3
+  inflation_dist: 0.3
   is_footprint_dynamic: true
   legacy_obstacle_association: false
   max_global_plan_lookahead_dist: 3.0
   max_number_classes: 6
-  max_vel_theta: 3.9995999999999996
-  max_vel_x: 1.0
+  max_vel_theta: 0.3
+  max_vel_x: 0.5
   max_vel_x_backwards: 0.01
   max_vel_y: 0.0
-  min_obstacle_dist: 0.5
+  min_obstacle_dist: 0.8
   min_turning_radius: 0.0
   no_inner_iterations: 5
   no_outer_iterations: 4
@@ -58,7 +58,7 @@ controller:
   publish_feedback: false
   roadmap_graph_area_width: 5.0
 
-  selection_prefer_initial_plan: 0.7
+  selection_prefer_initial_plan: 1
   selection_viapoint_cost_scale: 8.0
   shrink_horizon_backup: true
   teb_autosize: true
@@ -67,7 +67,7 @@ controller:
   visualize_hc_graph: false
   visualize_with_time_as_z_axis_scale: 0.0
   weight_acc_lim_theta: 1.0
-  weight_acc_lim_x: 50.0
+  weight_acc_lim_x: 1.0
   weight_acc_lim_y: 1.0
   weight_adapt_factor: 2.0
   weight_dynamic_obstacle: 50.0
@@ -80,7 +80,7 @@ controller:
   weight_max_vel_x: 60.0
   weight_max_vel_y: 2.0
   weight_obstacle: 50.0
-  weight_optimaltime: 200.0
+  weight_optimaltime: 10.0
   weight_viapoint: 1.0
-  xy_goal_tolerance: 0.2
+  xy_goal_tolerance: 0.8
   yaw_goal_tolerance: 0.12796000000000002
