--- a/config_nav/local_costmap_params.yaml
+++ b/config_nav/local_costmap_params.yaml
@@ -2,12 +2,12 @@ local_costmap:
   publish_voxel_map: true
   global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 20.0
-  publish_frequency: 20.0
+  update_frequency: 5.0
+  publish_frequency: 5.0
   static_map: true
   rolling_window: true
-  width: 3.0 # 5.0
-  height: 3.0 # 5.0
+  width: 5.0
+  height: 5.0
   resolution: 0.1 # 0.025
   origin_x: 0.0
   origin_y: 0.0
