only conv model

--- a/config_nav_simulation/my_costmap.yaml
+++ b/config_nav_simulation/my_costmap.yaml
@@ -3,7 +3,7 @@ my_costmap:
   static_map: true
   rolling_window: false
   robot_base_frame: "/base_link"
-  map_topic: "map"
+  map_topic: "/gmap"
   publish_frequency: 20
   obstacles:
     observation_sources: scan
