--- a/config_nav_simulation/costmap_common_params.yaml
+++ b/config_nav_simulation/costmap_common_params.yaml
@@ -10,9 +10,11 @@ transform_tolerance: 1.0 # 0.3
 obstacle_range: 2.5
 max_obstacle_height: 2.0
 raytrace_range: 5.0
-footprint: [[-0.5, -0.35], [-0.5, 0.35], [0.5, 0.35], [0.5, -0.35]]
+footprint: [[-0.3, -0.3], [-0.3, 0.3], [0.3, 0.3], [0.3, -0.3]]
+#[[-0.5, -0.35], [-0.5, 0.35], [0.5, 0.35], [0.5, -0.35]]
 #robot_radius: 0.46
-footprint_padding: 0.1
+#footprint_padding: 0.1
+footprint_padding: 0.001
 inflation_radius: 2.5
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 10
